# studio

./: CMakeLists.txt  LICENSE  README.md
completions/: .studio.zsh  CMakeLists.txt
include/: CMakeLists.txt  CMakeLists.txt.tmpl  helpers.cmake  setliblist.cmake
libexec/: CMakeLists.txt  studio  studio-b  studio-build  studio-ca  studio-cf  studio-clean  studio-commands  studio-cp  studio-create  studio-create-analyzer  studio-create-filter  studio-create-producer  studio-create-service  studio-cs  studio-example  studio-init  studio-liblist  studio-ll  studio-pro  studio-project  studio-skelgen  wrapper.sh
studio/completions/: studio.bash
studio/libexec/: clear.sh  studio-build  studio-commands  studio-completions  studio-create  studio-example  studio-help
ups/: CMakeLists.txt  product_deps  studio.current.in  studio.table.in
